puppet/modules/base_install/files/iptables
# PUPPET MANAGED
#
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:SPECIFIC_RULES - ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A INPUT -j SPECIFIC_RULES
-A SPECIFIC_RULES -m state --state NEW -m tcp -p tcp --dport 9443:9480 -j ACCEPT
-A SPECIFIC_RULES -m state --state NEW -m tcp -p tcp --dport 8280:8320 -j ACCEPT
-A SPECIFIC_RULES -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A SPECIFIC_RULES -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A SPECIFIC_RULES -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A SPECIFIC_RULES -m state --state NEW -m tcp -p tcp --dport 3306 -j ACCEPT
-A SPECIFIC_RULES -j DROP
COMMIT
